--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -21,12 +21,12 @@
     "| Luuc Leclercq| 6578136 |\n",
     "| Aragon van Doesburg| 6394485 |\n",
     "\n",
-    "| Planning Groep: XX     |Tijdstip / Tijdspanne  |\n",
+    "| Planning Groep: 41     |Tijdstip / Tijdspanne  |\n",
     "|---|---|\n",
-    "| Mijlpaal 1: Criteria opgesteld | Tijdstip |\n",
-    "| Mijlpaal 2: Eerste kalibratie meting gedaan| Tijdstip |\n",
-    "| Pauze 1| Tijdspanne |\n",
-    "| Pauze 2| Tijdspanne |"
+    "| Mijlpaal 1: Criteria opgesteld | 12:45 |\n",
+    "| Mijlpaal 2: Eerste kalibratie meting gedaan| 15:00 |\n",
+    "| Pauze 1| 12:45 - 13:45 |\n",
+    "| Pauze 2| 15:00 - 15:30 |"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "\n",
     "Zet de foto in dezelfde map als dit notebook en verander hieronder de naam in de naam van de foto.\n",
     "\n",
-    "![Alt](TU_P2_rgb.png \"analyse: ideeen\")"
+    "![Alt](fotodingen.jpg \"analyse: ideeen\")"
    ]
   },
   {
