--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -49,17 +49,17 @@
     "\n",
     "| Sensor | Toepassing | Criteria |\n",
     "|:---|:---|:---|\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
-    "|sensornaam | toepassing omschrijving | Criteria omschrijving |\n",
+    "|Druk sensor | Object wordt op druk sensor gelegd. Kracht wordt gemeten en omgezet tot massa. | Moet tegen 100 Newton kracht van boven aankunnen. Moet massa tussen 0-10 kg op 1 decimaal nauwkeurig kunnen meten.  |\n",
+    "|Druk sensor | Sensor wordt gebruikt als knop. Geeft aan wanneer ingedrukt met voldoende kracht. | Moet waardes hoger dan 5 newton kunnen decteren. Moet bij druk waardes tussen 0-5 Newton geen output geven als knop. |\n",
+    "|Druk sensor | Druk sensor wordt gebruikt om te bepalen hoeveel objecten over de druksensor heen rollen. | Moet waardes tussen 10 - 500 gram kunnen detecteren. Moet een latentie laag genoeg hebben om meerdere objecten achter elkaar te bepalen, 50 ms of lager.  |\n",
+    "|Licht sensor | Meerdere lichtsensoren in de vorm van een halve bol worden gebruikt om een zonnepaneel constant in de richting van de zon te mikken. | Moet sensitief genoeg zijn om richting zon te bepalen. Sensitiviteit van 0.05 $W/m^2$ of lager. |\n",
+    "|Licht sensor | Licht sensor wordt gebruikt om de temperatuur van gloeilampen te bepalen gebaseerd op hun licht afgave. | Moet tegen temperaturen kunnen van 475K en lager. Moet een lichtintensiteit tussen de 0 en 2000 lumen kunnen meten. |\n",
+    "|Licht sensor | Bepalen van licht intensiteit in afgesloten omgeving | Moet een lichtintensiteit kunnen meten tussen 0-3000 lumen kunnen meten. |\n",
+    "|Temperatuur sensor | Gebruikt als thermometer voor bepalen drinkbaarheid thee. | Moet tegen temperaturen kunnen tussen de 0-100 graden celcius. Moet water bestendig zijn. Sensitiviteit van maximaal 3 graden celcius |\n",
+    "|Temperatuur sensor | Bepalen lichaamstemperatuur persoon om te  checken of een persoon koorts heeft.  | Moet tegen temperaturen kunnen tot 45 graden celcius. Moet een sensitiviteit hebben van 0.1 graden celcius of lager. Moet water bestendig zijn.  |\n",
+    "|Temperatuur sensor | Gebruikt om buiten temperatuur te bepalen.  | Moet tegen temperaturen van -20 - 40 graden celcius kunnen. Moet water bestendig zijn. Moet een sensitiviteit hebben van 1 graden celcius of lager.   |\n",
     "\n",
-    "Groep XX heeft gekozen voor sensor YY. "
+    "Groep 41 heeft gekozen voor de druk sensor."
    ]
   },
   {
