--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -51,7 +51,7 @@
     "|:---|:---|:---|\n",
     "|Druk sensor | Object wordt op druk sensor gelegd. Kracht wordt gemeten en omgezet tot massa. | Moet tegen 100 Newton kracht van boven aankunnen. Moet massa tussen 0-10 kg op 1 decimaal nauwkeurig kunnen meten.  |\n",
     "|Druk sensor | Sensor wordt gebruikt als knop. Geeft aan wanneer ingedrukt met voldoende kracht. | Moet waardes hoger dan 5 newton kunnen decteren. Moet bij druk waardes tussen 0-5 Newton geen output geven als knop. |\n",
-    "|Druk sensor | Druk sensor wordt gebruikt om te bepalen hoeveel objecten over de druksensor heen rollen. | Moet waardes tussen 10 - 500 gram kunnen detecteren. Moet een latentie laag genoeg hebben om meerdere objecten achter elkaar te bepalen, 50 ms of lager.  |\n",
+    "|Druk sensor | Druk sensor wordt gebruikt om te bepalen hoeveel objecten over de druksensor heen rollen en van elk object het massa. | Moet waardes tussen 10 - 500 gram kunnen detecteren met een sensitiviteit van 5 gram. Moet een latentie laag genoeg hebben om meerdere objecten achter elkaar te bepalen, 50 ms of lager.  |\n",
     "|Licht sensor | Meerdere lichtsensoren in de vorm van een halve bol worden gebruikt om een zonnepaneel constant in de richting van de zon te mikken. | Moet sensitief genoeg zijn om richting zon te bepalen. Sensitiviteit van 0.05 $W/m^2$ of lager. |\n",
     "|Licht sensor | Licht sensor wordt gebruikt om de temperatuur van gloeilampen te bepalen gebaseerd op hun licht afgave. | Moet tegen temperaturen kunnen van 475K en lager. Moet een lichtintensiteit tussen de 0 en 2000 lumen kunnen meten. |\n",
     "|Licht sensor | Bepalen van licht intensiteit in afgesloten omgeving | Moet een lichtintensiteit kunnen meten tussen 0-3000 lumen kunnen meten. |\n",
