--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -59,7 +59,7 @@
     "|Temperatuur sensor | Bepalen lichaamstemperatuur persoon om te  checken of een persoon koorts heeft.  | Moet tegen temperaturen kunnen tot 45 graden celcius. Moet een sensitiviteit hebben van 0.1 graden celcius of lager. Moet water bestendig zijn.  |\n",
     "|Temperatuur sensor | Gebruikt om buiten temperatuur te bepalen.  | Moet tegen temperaturen van -20 - 40 graden celcius kunnen. Moet water bestendig zijn. Moet een sensitiviteit hebben van 1 graden celcius of lager.   |\n",
     "\n",
-    "Groep 41 heeft gekozen voor de druk sensor."
+    "Groep 41 heeft gekozen voor de druk sensor (optie 3)."
    ]
   },
   {
@@ -67,8 +67,8 @@
    "metadata": {},
    "source": [
     "## *Opdracht 3*: Foto van de schets van jouw meetopstelling in.\n",
-    "Licht kort toe wat er in de foto te zien is.\n",
-    " ![Alt](TU_P2_rgb.png \"schets student\")"
+    "Dit figuur weergeeft ons meet ding\n",
+    " ![Alt](Fotodingen2.jpg \"schets student\")"
    ]
   },
   {
