--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -59,7 +59,7 @@
     "|Temperatuur sensor | Bepalen lichaamstemperatuur persoon om te  checken of een persoon koorts heeft.  | Moet tegen temperaturen kunnen tot 45 graden celcius. Moet een sensitiviteit hebben van 0.1 graden celcius of lager. Moet water bestendig zijn.  |\n",
     "|Temperatuur sensor | Gebruikt om buiten temperatuur te bepalen.  | Moet tegen temperaturen van -20 - 40 graden celcius kunnen. Moet water bestendig zijn. Moet een sensitiviteit hebben van 1 graden celcius of lager.   |\n",
     "\n",
-    "Groep 41 heeft gekozen voor de druk sensor (optie 3)."
+    "Groep 41 heeft gekozen voor de druk sensor (optie 3). "
    ]
   },
   {
@@ -262,9 +262,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
