--- a/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
+++ b/FysiekeOntwerpopdrachten/1KalibreerEenSensorDigitaalAnaloog/DEFOntwerpopdracht1KalibreerEenSensorInvulTemplate.ipynb
@@ -68,7 +68,10 @@
    "source": [
     "## *Opdracht 3*: Foto van de schets van jouw meetopstelling in.\n",
     "Dit figuur weergeeft onze meet opstelling. Deze bevat de druk sensor die het gewicht van verschillende balletjes meet terwijl deze er over heen rollen.\n",
-    " ![Alt](Fotodingen2.jpg \"schets student\")"
+    " ![Alt](Fotodingen2.jpg \"schets student\")\n",
+    "\n",
+    "2e iteratie, een grotere weerstand is gebruikt. \n",
+    " ![Alt](figuurnogwat.jpg \"schets student2\")"
    ]
   },
   {
@@ -90,7 +93,10 @@
    "source": [
     "## *Opdracht 5*: Foto van jouw meetopstelling in. Leerdoel.\n",
     "In deze meetopstelling is de opstelling te zien. Een baan is gemaakt om de ballen die over de weegschaal gerold worden recht te houden. Het gewicht van deze weegschalen wordt dan gemeten door de druk sensor.\n",
-    " ![Alt](Fotodingen33.jpg \"meetopstelling student\")"
+    " ![Alt](Fotodingen33.jpg \"meetopstelling student\")\n",
+    "\n",
+    "Voor de kalibratie is een alternatieve opstelling gebruikt om accurater 1 gewicht tegelijk te meten\n",
+    " ![Alt](figuurnognogwat.jpg \"schets student\")"
    ]
   },
   {
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-29T10:35:31.638062Z",
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-29T10:35:31.971931Z",
@@ -192,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nee."
+    "1 Iteratie is nodig met een hogere weerstand. De gegeven bit waardes waren te laag waardoor metingen onduidelijk waren bij de lage weerstand. Een hogere weerstand zal dit oplossen. "
    ]
   },
   {
