2de nog een keer

--- a/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
+++ b/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
@@ -587,7 +587,7 @@
     "plt.xlabel(\"z ($m$)\")\n",
     "plt.ylabel(\"E ($V/m$)\")\n",
     "plt.title(\"E-veld langs de z-as van een uniform geladen schijf\")\n",
-    "plt.savefig(\"2d_E_veld_z_as.png\")\n",
+    "plt.savefig(\"2e_E_veld_z_as.png\")\n",
     "plt.show()"
    ]
   },
