--- a/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
+++ b/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
@@ -720,7 +720,17 @@
    "source": [
     "##### Antwoord 2h\n",
     "\n",
-    "*Edit deze markdown cel met je antwoord.*"
+    "$$ \\frac{\\sigma}{\\epsilon_020}= \\frac{\\sigma}{2\\epsilon_0} \\bigg[ 1- \\frac{z}{\\sqrt{R^2 + z^2}}\\bigg] \\hat{\\mathbf{z}}$$\n",
+    "\n",
+    "$$ \\frac{1}{10}= 1- \\frac{z}{\\sqrt{R^2 + z^2}}$$\n",
+    "\n",
+    "$$ \\frac{9}{10}= \\frac{z}{\\sqrt{R^2 + z^2}}$$\n",
+    "\n",
+    "$$ \\frac{81}{100}(R^2+z^2)= z^2$$\n",
+    "\n",
+    "$$ \\frac{81}{100}R^2= \\frac{19}{100}z^2$$\n",
+    "\n",
+    "$$ z = \\pm \\sqrt{\\frac{81}{19}R^2} $$"
    ]
   },
   {
