--- a/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
+++ b/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "id": "5682f22f",
    "metadata": {
     "ExecuteTime": {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "id": "af9b89a5",
    "metadata": {
     "ExecuteTime": {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "id": "8b6c706f-054f-4ea2-8055-46b3d254815d",
    "metadata": {
     "ExecuteTime": {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "id": "3b4d4813-57e9-459b-ad60-a32d943199cd",
    "metadata": {
     "ExecuteTime": {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "id": "6b88d1eb",
    "metadata": {
     "ExecuteTime": {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "id": "c840610f",
    "metadata": {
     "ExecuteTime": {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "id": "523f26e3",
    "metadata": {
     "ExecuteTime": {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 102,
    "id": "507ac446",
    "metadata": {
     "ExecuteTime": {
@@ -479,7 +479,7 @@
        "Text(0, 0.5, 'V ($V$)')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 103,
    "id": "501ef288-10eb-4b74-be5e-1f8e21ae6473",
    "metadata": {
     "ExecuteTime": {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 104,
    "id": "ed5e582d497de1b3",
    "metadata": {
     "ExecuteTime": {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 105,
    "id": "9feef4b9",
    "metadata": {
     "ExecuteTime": {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 106,
    "id": "0659385a",
    "metadata": {
     "ExecuteTime": {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "id": "b31ae6bd",
    "metadata": {
     "ExecuteTime": {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "id": "f143bed8a0f100b1",
    "metadata": {
     "ExecuteTime": {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "id": "4259bb1d",
    "metadata": {
     "ExecuteTime": {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "id": "ddb3552c",
    "metadata": {
     "ExecuteTime": {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "id": "9e0f3582",
    "metadata": {
     "ExecuteTime": {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "id": "b5b331a3",
    "metadata": {
     "ExecuteTime": {
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 113,
    "id": "05f4d596",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 114,
    "id": "605c2b09",
    "metadata": {
     "ExecuteTime": {
@@ -1267,7 +1267,7 @@
     "\n",
     "*Beantwoord in deze markdown cel vraag 4d.*\n",
     "1)the outer surfaces carry no charge, this is because the inner surface chrgs creat the required field between disks, the outer surfaces are 'shielded' and have no need for charge as they do not contribute to the pot diff between disks \n",
-    "2)the field near the surface of a conductor is perpedicular to the surface itself and the magnitude of it is proportional to the local surface chrg density,high near edges and low at the center"
+    "2)the field near the surface of a conductor is perpedicular to the surface itself and the magnitude of it is proportional to the local surface chrg density,high near edges and low at the center $E_{perp} = \\frac{\\sigma}{\\epsilon_0}$"
    ]
   },
   {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 115,
    "id": "216d219c23aec579",
    "metadata": {
     "ExecuteTime": {
@@ -1294,11 +1294,29 @@
      "start_time": "2026-02-06T10:55:39.601833Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lower disk (z=-1.00m)surface chrg densities\n",
+      "Ez just below bottom surface 4.377e+00 V/m, sigma_bottom = 3.875e-11 C/m^2\n",
+      "Ez just above top surface -1.000e+01 V/m, sigma top = -8.858e-11 C/m^2\n"
+     ]
+    }
+   ],
    "source": [
     "###\n",
     "###Your code here###\n",
-    "###"
+    "###\n",
+    "idx_disk2 = np.argmin(np.abs(z_for_E-z_pos_disk2))\n",
+    "Ez_below = Ez[idx_disk2-1,idx_r0]#field below disk\n",
+    "Ez_above = Ez[idx_disk2+1,idx_r0]#field above disk\n",
+    "sigma_bottom = epsilon0*Ez_below\n",
+    "sigma_top=epsilon0*Ez_above\n",
+    "print('lower disk (z={:.2f}m)surface chrg densities'.format(z_pos_disk2))\n",
+    "print(f'Ez just below bottom surface {Ez_below:.3e} V/m, sigma_bottom = {sigma_bottom:.3e} C/m^2')\n",
+    "print(f'Ez just above top surface {Ez_above:.3e} V/m, sigma top = {sigma_top:.3e} C/m^2')"
    ]
   },
   {
@@ -1320,7 +1338,45 @@
    "source": [
     "##### Antwoorden 4f\n",
     "\n",
-    "*Beantwoord vraag 4f in deze cel.*"
+    "*Beantwoord vraag 4f in deze cel.*\n",
+    "1)the actural chrg dist is not uniform and concentrated on inner surfaces unlike the uniform assumption in 4c and the tot charge is smaler that the theoretical estimate bcs fringing reduces the effective surface chrg\n",
+    "2)the finite size of the disks and fringing fields lower the system cap compared to ideal theory\n",
+    "3) as the spacing between disks decreaes, the chrg density inner an total chrg on the disk and the sim cap all increase, thus demonstarting the effect that closer disks leads to higher cap\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "891c4f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New disk spacing 1 M\n",
+      "inner surface sigma -1.771e-10 C/m^2\n",
+      "aprrox tot Q on 1 disk -5.007e-09 C\n",
+      "sim cap -2.503e-10 F\n"
+     ]
+    }
+   ],
+   "source": [
+    "spacing_between_disks = 1\n",
+    "z_pos_disk1 = spacing_between_disks/2\n",
+    "z_pos_disk2 = -spacing_between_disks/2\n",
+    "r, z, r_repmat, V,B,idx_R,idx_z1,idx_z2 = initialize_variables_Laplace(width_domain,disk_radius,height_domain,grid_step,z_pos_disk1,z_pos_disk2,V0,V1,V2)\n",
+    "solve_Laplace_equation(V,B,r_repmat,grid_step,idx_z1,idx_z2,idx_R,V1,V2,1e-3)\n",
+    "Er,Ez,normE = compute_E_disk(V,B,grid_step)\n",
+    "idx_disk2 = np.argmin(np.abs(z_for_E - z_pos_disk2))\n",
+    "Ez_inner = Ez[idx_disk2+1,idx_r0]\n",
+    "sigma_inner = epsilon0*Ez_inner\n",
+    "Q_total_disk = sigma_inner *np.pi*disk_radius**2\n",
+    "C_sim=Q_total_disk/(V1-V2)\n",
+    "print(f'New disk spacing {spacing_between_disks} M')\n",
+    "print(f'inner surface sigma {sigma_inner:.3e} C/m^2')\n",
+    "print(f'aprrox tot Q on 1 disk {Q_total_disk:.3e} C')\n",
+    "print(f'sim cap {C_sim:.3e} F')"
    ]
   },
   {
@@ -1350,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 117,
    "id": "c3b865e6-4ff2-423b-b085-3826ba744e41",
    "metadata": {
     "ExecuteTime": {
@@ -1387,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 118,
    "id": "e372f311-63f8-425f-af57-b5f521d8d358",
    "metadata": {
     "ExecuteTime": {
@@ -1435,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 119,
    "id": "a35a159f-34c3-475c-a3cc-143e0f011921",
    "metadata": {
     "ExecuteTime": {
@@ -1496,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 120,
    "id": "8c8cf70d-5e3e-44d0-897d-61ce798e19fe",
    "metadata": {
     "ExecuteTime": {
@@ -1536,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 121,
    "id": "13a523d4-4da0-451f-9a42-80be0d42da5b",
    "metadata": {
     "ExecuteTime": {
@@ -1610,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 122,
    "id": "88e7b72f",
    "metadata": {
     "ExecuteTime": {
@@ -1682,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 123,
    "id": "84989640-59c6-41e1-b177-4d13c80d1f5f",
    "metadata": {
     "ExecuteTime": {
@@ -1763,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 124,
    "id": "24bc0447-b62a-4e5d-beaf-d3709951a358",
    "metadata": {
     "ExecuteTime": {
