--- a/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
+++ b/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
@@ -932,9 +932,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_4992\\2610843805.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_5756\\2610843805.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
       "  sigma_conducting=Q/(2*np.pi*R*np.sqrt(R**2-r_vals**2))#calculating density of conducting disk\n",
-      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_4992\\2610843805.py:11: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_5756\\2610843805.py:11: RuntimeWarning: divide by zero encountered in divide\n",
       "  sigma_conducting=Q/(2*np.pi*R*np.sqrt(R**2-r_vals**2))#calculating density of conducting disk\n"
      ]
     },
@@ -1407,12 +1407,12 @@
    },
    "outputs": [],
    "source": [
-    "def vlakkeplaat(relevante_parameters):\n",
-    "    C = None\n",
+    "def vlakkeplaat(epsilon,A,d):\n",
+    "    C = epsilon*A/d\n",
     "    return C\n",
     "\n",
-    "def cilinder(relevante_parameters):\n",
-    "    C = None\n",
+    "def cilinder(epsilon,L,R_buiten,R_binnen):\n",
+    "    C = (2*np.pi*epsilon*L) / np.log(R_buiten/R_binnen)\n",
     "    return  C"
    ]
   },
@@ -1442,11 +1442,97 @@
      "start_time": "2026-02-06T10:55:54.151180Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(OPGV 1) De capaciteit van de vlakke plaat condensator is: 8.854e-11 F\n",
+      "\n",
+      "(OPGV 2) De capaciteit van de cilinder condensator is: 5.280e-11 F\n",
+      "\n",
+      "(OPGV 3) De capaciteit van de vlakke plaat condensator is: 4.427e-11 F\n",
+      "(OPGV 3) De capaciteit van de cilindrische condensator is: 2.772e-11 F\n",
+      "\n",
+      "(OPGV 4) De capaciteit van de vlakke plaat condensator is: 7.083e-09 F\n",
+      "(OPGV 4) De capaciteit van de cilindrische condensator is: 4.224e-09 F\n",
+      "\n",
+      "(OPGV 5) De capaciteit van de vlakke plaat condensator is: 3.984e-10 F\n",
+      "(OPGV 5) De capaciteit van de cilindrische condensator is: 2.376e-10 F\n"
+     ]
+    }
+   ],
    "source": [
-    "###\n",
-    "###your code here###\n",
-    "###"
+    "#-------------OPGV 1-------------\n",
+    "epsilon0 = 8.854e-12  # permittiviteit van vacuum (F/m), ongeveer gelijk aan permittiviteit van lucht\n",
+    "A = 0.1*0.1 #oppervlakte van de platen (m^2)\n",
+    "d = 0.001 #afstand tussen de platen (m)\n",
+    "\n",
+    "C1 = vlakkeplaat(epsilon0, A, d)\n",
+    "print(\"(OPGV 1) De capaciteit van de vlakke plaat condensator is: %.3e F\" % C1)\n",
+    "print()\n",
+    "\n",
+    "#-------------OPGV 2-------------\n",
+    "L = 0.1 #lengte van de cilinder (m)\n",
+    "R_binnen = 0.0045 #binnen straal van de cilinder (m)\n",
+    "R_buiten = 0.005 #buiten straal van de cilinder (m)\n",
+    "C2 = cilinder(epsilon0, L, R_buiten, R_binnen)\n",
+    "print(\"(OPGV 2) De capaciteit van de cilinder condensator is: %.3e F\" % C2)\n",
+    "print()\n",
+    "\n",
+    "#-------------OPGV 3-------------\n",
+    "#Vlakke plaat condensator\n",
+    "A = 0.1*0.1 #oppervlakte van de platen (m^2)\n",
+    "d = 0.002 #afstand tussen de platen (m)\n",
+    "\n",
+    "C3_1 = vlakkeplaat(epsilon0, A, d)\n",
+    "print(\"(OPGV 3) De capaciteit van de vlakke plaat condensator is: %.3e F\" % C3_1)\n",
+    "\n",
+    "#Cilindrische condensator\n",
+    "L = 0.1 #lengte van de cilinder (m)\n",
+    "R_binnen = 0.0045 #binnen straal van de cilinder (m)\n",
+    "R_buiten = 0.0055 #buiten straal van de cilinder (m)\n",
+    "\n",
+    "C3_2 = cilinder(epsilon0, L, R_buiten, R_binnen)\n",
+    "print(\"(OPGV 3) De capaciteit van de cilindrische condensator is: %.3e F\" % C3_2)\n",
+    "print()\n",
+    "\n",
+    "#-------------OPGV 4-------------\n",
+    "epsilon = epsilon0*80 # permittiviteit van water (F/m)\n",
+    "\n",
+    "#Vlakke plaat condensator\n",
+    "A = 0.1*0.1 #oppervlakte van de platen (m^2)\n",
+    "d = 0.001 #afstand tussen de platen (m)\n",
+    "\n",
+    "C4_1 = vlakkeplaat(epsilon, A, d)\n",
+    "print(\"(OPGV 4) De capaciteit van de vlakke plaat condensator is: %.3e F\" % C4_1)\n",
+    "\n",
+    "#Cilindrische condensator\n",
+    "L = 0.1 #lengte van de cilinder (m)\n",
+    "R_binnen = 0.0045 #binnen straal van de cilinder (m)\n",
+    "R_buiten = 0.005 #buiten straal van de cilinder (m)\n",
+    "\n",
+    "C4_2 = cilinder(epsilon, L, R_buiten, R_binnen)\n",
+    "print(\"(OPGV 4) De capaciteit van de cilindrische condensator is: %.3e F\" % C4_2)\n",
+    "print()\n",
+    "\n",
+    "#-------------OPGV 5-------------\n",
+    "epsilon = epsilon0*4.5 # permittiviteit van PVC (F/m)\n",
+    "\n",
+    "#Vlakke plaat condensator\n",
+    "A = 0.1*0.1 #oppervlakte van de platen (m^2)\n",
+    "d = 0.001 #afstand tussen de platen (m)\n",
+    "\n",
+    "C5_1 = vlakkeplaat(epsilon, A, d)\n",
+    "print(\"(OPGV 5) De capaciteit van de vlakke plaat condensator is: %.3e F\" % C5_1)\n",
+    "\n",
+    "#Cilindrische condensator\n",
+    "L = 0.1 #lengte van de cilinder (m)\n",
+    "R_binnen = 0.0045 #binnen straal van de cilinder (m)\n",
+    "R_buiten = 0.005 #buiten straal van de cilinder (m)\n",
+    "\n",
+    "C5_2 = cilinder(epsilon, L, R_buiten, R_binnen)\n",
+    "print(\"(OPGV 5) De capaciteit van de cilindrische condensator is: %.3e F\" % C5_2)"
    ]
   },
   {
