--- a/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
+++ b/DigitaleOntwerpopdrachten/1CondensatorOpdracht/CondensatorOntwerpopdracht.ipynb
@@ -932,9 +932,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_5756\\2610843805.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_10652\\2610843805.py:11: RuntimeWarning: invalid value encountered in sqrt\n",
       "  sigma_conducting=Q/(2*np.pi*R*np.sqrt(R**2-r_vals**2))#calculating density of conducting disk\n",
-      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_5756\\2610843805.py:11: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\artij\\AppData\\Local\\Temp\\ipykernel_10652\\2610843805.py:11: RuntimeWarning: divide by zero encountered in divide\n",
       "  sigma_conducting=Q/(2*np.pi*R*np.sqrt(R**2-r_vals**2))#calculating density of conducting disk\n"
      ]
     },
@@ -1576,11 +1576,33 @@
      "start_time": "2026-02-06T10:55:56.084791Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(OPGV 1) De benodigde lengte van de cilinder is: 3.277e+03 m\n",
+      "(OPGV 2) De benodigde lengte van de platen is: 9.412e+04 m\n"
+     ]
+    }
+   ],
    "source": [
-    "###\n",
-    "###Jouw code hier###\n",
-    "###"
+    "C = 1e-6 # capaciteit van de condensator (F)\n",
+    "epsilon0 = 8.854e-12  # permittiviteit van vacuum (F/m), ongeveer gelijk aan permittiviteit van lucht\n",
+    "\n",
+    "#OPGV 1:\n",
+    "R_binnen = 0.005 # binnen straal van de cilinder (m)\n",
+    "R_buiten = 0.006 # buiten straal van de cilinder (m)\n",
+    "\n",
+    "L1 = (C * np.log(R_buiten/R_binnen)) / (2 * np.pi * epsilon0) #lengte van de cilinder (m)\n",
+    "print(\"(OPGV 1) De benodigde lengte van de cilinder is: %.3e m\" % L1)\n",
+    "\n",
+    "#OPGV 2:\n",
+    "d = 0.005 # afstand tussen de platen (m)\n",
+    "B = 0.006 # Breedte van de platen (m)\n",
+    "\n",
+    "L2 = C * d / (B*epsilon0) #lengte van de platen (m)\n",
+    "print(\"(OPGV 2) De benodigde lengte van de platen is: %.3e m\" % L2)\n"
    ]
   },
   {
